tests/ui/type-alias-impl-trait/different_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/different_defining_uses.rs:15:5
   |
LL |     42i32
   |     ^^^^^ expected `&'static str`, got `i32`
   |
note: previous use here
  --> $DIR/different_defining_uses.rs:10:5
   |
LL |     ""
   |     ^^

error: aborting due to 1 previous error

